[gd_scene load_steps=7 format=3 uid="uid://bcgx53je7hvtf"]

[ext_resource type="PackedScene" path="res://addons/octahedral_impostors/scenes/dilatate_pipeline.tscn" id="1"]
[ext_resource type="Script" path="res://addons/octahedral_impostors/scripts/impostor_baker_window.gd" id="2"]
[ext_resource type="PackedScene" path="res://addons/octahedral_impostors/scenes/exporter.tscn" id="3"]
[ext_resource type="Script" path="res://addons/octahedral_impostors/scripts/baking/baker.gd" id="5"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.231373, 0.231373, 0.32549, 0.47451)

[sub_resource type="QuadMesh" id="4"]
size = Vector2(2, 2)

[node name="ImpostorBaker" type="Window"]
size = Vector2i(300, 400)
script = ExtResource("2")

[node name="MainContainer" type="HSplitContainer" parent="."]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Panel" type="Panel" parent="MainContainer"]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
theme_override_styles/panel = SubResource("1")

[node name="container" type="VBoxContainer" parent="MainContainer/Panel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 4.0
offset_right = -7.0
theme_override_constants/separation = 6

[node name="Generate" type="Button" parent="MainContainer/Panel/container"]
layout_mode = 2
text = "Generate"

[node name="progress" type="ProgressBar" parent="MainContainer/Panel/container"]
layout_mode = 2
max_value = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer/Panel/container"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/Panel/container/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
tooltip_text = "How much space the object covers in the atlas tiles."
mouse_filter = 0
text = "Atlas Coverage"

[node name="SpinBoxCoverage" type="SpinBox" parent="MainContainer/Panel/container/HBoxContainer"]
layout_mode = 2
value = 100.0
allow_greater = true
suffix = "%"

[node name="HBoxContainer3" type="HBoxContainer" parent="MainContainer/Panel/container"]
layout_mode = 2

[node name="Label4" type="Label" parent="MainContainer/Panel/container/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
tooltip_text = "The number of rows and columns generated in the atlases."
mouse_filter = 0
text = "Grid size"

[node name="SpinBoxGridSize" type="SpinBox" parent="MainContainer/Panel/container/HBoxContainer3"]
layout_mode = 2
min_value = 2.0
max_value = 64.0
value = 16.0

[node name="HBoxContainer2" type="HBoxContainer" parent="MainContainer/Panel/container"]
layout_mode = 2

[node name="Label2" type="Label" parent="MainContainer/Panel/container/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
tooltip_text = "The resolution of the atlases."
mouse_filter = 0
text = "Atlas Resolution"

[node name="OptionButtonImgRes" type="OptionButton" parent="MainContainer/Panel/container/HBoxContainer2"]
layout_mode = 2
item_count = 3
selected = 1
popup/item_0/text = "1024"
popup/item_0/id = 0
popup/item_1/text = "2048"
popup/item_1/id = 1
popup/item_2/text = "4096"
popup/item_2/id = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="MainContainer/Panel/container"]
layout_mode = 2

[node name="Label2" type="Label" parent="MainContainer/Panel/container/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
tooltip_text = "Whether the tiles are generated for the entire sphere. Set to true if the impostor will be viewed from all angles, including from the bottom."
mouse_filter = 0
text = "Full Sphere"

[node name="CheckboxFullSphere" type="CheckBox" parent="MainContainer/Panel/container/HBoxContainer4"]
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="MainContainer/Panel/container"]
layout_mode = 2

[node name="Label3" type="Label" parent="MainContainer/Panel/container/HBoxContainer5"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
tooltip_text = "Whether the impostor should use a high quality shader."
mouse_filter = 0
text = "Profile"

[node name="OptionButtonProfile" type="OptionButton" parent="MainContainer/Panel/container/HBoxContainer5"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "standard"
popup/item_0/id = 0
popup/item_1/text = "light"
popup/item_1/id = 1

[node name="HBoxContainer7" type="HBoxContainer" parent="MainContainer/Panel/container"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/Panel/container/HBoxContainer7"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
tooltip_text = "Exports data atlas images in reduced resolution."
mouse_filter = 0
text = "Optimize Size"

[node name="CheckBoxHalfResolution" type="CheckBox" parent="MainContainer/Panel/container/HBoxContainer7"]
layout_mode = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="MainContainer/Panel/container"]
layout_mode = 2

[node name="Label" type="Label" parent="MainContainer/Panel/container/HBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
tooltip_text = "Whether to export the impostor itself. Disable if you just want the atlas images."
mouse_filter = 0
text = "Export with Shadow Mesh"

[node name="CheckBoxShadow" type="CheckBox" parent="MainContainer/Panel/container/HBoxContainer6"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MainContainer"]
clip_contents = true
custom_minimum_size = Vector2(475, 475)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 6

[node name="FileDialog" type="FileDialog" parent="."]
dialog_hide_on_ok = true

[node name="ViewportBaking" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
debug_draw = 1
size = Vector2i(2048, 2048)
size_2d_override_stretch = true
render_target_update_mode = 3

[node name="BakedContainer" type="Node3D" parent="ViewportBaking"]

[node name="PostProcess" type="MeshInstance3D" parent="ViewportBaking"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.45593)
visible = false
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource("4")

[node name="BakerScript" type="Node3D" parent="."]
script = ExtResource("5")

[node name="Exporter" parent="BakerScript" instance=ExtResource("3")]

[node name="DilatatePipeline" parent="BakerScript" instance=ExtResource("1")]

[connection signal="pressed" from="MainContainer/Panel/container/Generate" to="." method="_on_Generate_pressed"]
[connection signal="value_changed" from="MainContainer/Panel/container/HBoxContainer/SpinBoxCoverage" to="." method="_on_SpinBox_value_changed"]
[connection signal="value_changed" from="MainContainer/Panel/container/HBoxContainer3/SpinBoxGridSize" to="." method="_on_SpinBoxGridSize_value_changed"]
[connection signal="item_selected" from="MainContainer/Panel/container/HBoxContainer2/OptionButtonImgRes" to="." method="_on_OptionButtonImgRes_item_selected"]
[connection signal="toggled" from="MainContainer/Panel/container/HBoxContainer4/CheckboxFullSphere" to="." method="_on_CheckboxFullSphere_toggled"]
[connection signal="item_selected" from="MainContainer/Panel/container/HBoxContainer5/OptionButtonProfile" to="." method="_on_OptionButtonProfile_item_selected"]
[connection signal="toggled" from="MainContainer/Panel/container/HBoxContainer7/CheckBoxHalfResolution" to="." method="_on_CheckBoxHalfResolution_toggled"]
[connection signal="toggled" from="MainContainer/Panel/container/HBoxContainer6/CheckBoxShadow" to="." method="_on_CheckBoxShadow_toggled"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
